<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:orderInCategory="1">
    <item
        android:visible="false"
        android:orderInCategory="1"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp"
        />
    <item
        android:visible="false"
        android:orderInCategory="2"
        android:title="@string/inbox"
        android:icon="@drawable/ic_email_black_24dp"
        />
    <item
        android:visible="false"
        android:orderInCategory="3"
        android:title="@string/sent"
        android:icon="@drawable/ic_mail_outline_black_24dp"
        />
    </group>

        <item
            android:orderInCategory="5"
            android:title="Setting">
            <menu>
                <item
                    android:visible="false"
                    android:orderInCategory="1"
                    android:title="Ganti Sandi"
                    android:icon="@drawable/ic_vpn_key_black_24dp"/>
                <item
                    android:visible="false"
                    android:id="@+id/settingAdmin"
                    android:orderInCategory="1"
                    android:title="Pengaturan"
                    android:icon="@drawable/ic_settings_black_24dp"/>
            </menu>
        </item>
</menu>