<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginActivity">
    <View
        android:id="@+id/viewBackground"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/skyBlue"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_wave"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewBackground"
        android:contentDescription="@string/icwave" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewBackground"
        android:contentDescription="@string/icwave" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="36dp"
        android:text="@string/sudah_memiliki_akun"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/viewBackground"
        app:layout_constraintTop_toTopOf="@+id/viewBackground" />
    <ScrollView
        android:layout_marginTop="160dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/viewBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:hint="@string/username"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconTint="@color/skyBlue">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/InUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColor="@color/skyBlue"
                android:drawablePadding="10dp"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        app:startIconTint="@color/skyBlue"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/InPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:textColor="@color/skyBlue"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:backgroundTint="@color/successColor"
            android:id="@+id/regBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/daftar"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/white" />
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:backgroundTint="@color/colorPrimary"
            android:id="@+id/loginBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_ucword"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/tvLpSandi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lupa_kata_sandi"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:textColor="@color/skyBlue"
        android:textAllCaps="false"/>
    <TextView
        android:visibility="gone"
        android:id="@+id/tvOR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:text="@string/atau"
        android:textColor="@color/colorPrimaryDark" />

        <com.google.android.material.button.MaterialButton
            android:visibility="gone"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/btnNewUser"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/pengguna_baru_daftar_sekarang_pt_alamjaya_bara_pratama"
            android:textColor="@color/skyBlue" />
        <com.google.android.material.button.MaterialButton
            android:visibility="gone"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/btnNewUserMitra"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/pengguna_baru_daftar_sekarang_mitra_kerja"
            android:textColor="@color/skyBlue" />
    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>