<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"xmlns:app="http://schemas.android.com/apk/res-auto"xmlns:tools="http://schemas.android.com/tools"android:layout_width="match_parent"android:layout_height="match_parent"tools:context=".Login.RegisterMitraKerjaActivity"><ImageView    android:id="@+id/ic_wave2"    android:layout_width="0dp"    android:layout_height="300dp"    android:scaleType="fitXY"    android:src="@drawable/ic_wave2"    app:layout_constraintEnd_toEndOf="parent"    app:layout_constraintStart_toStartOf="parent"    app:layout_constraintBottom_toBottomOf="parent" /><LinearLayout    android:id="@+id/linearLayout5"    android:layout_width="0dp"    android:layout_height="wrap_content"    android:orientation="horizontal"    android:paddingLeft="10dp"    android:paddingRight="10dp"    android:paddingBottom="10dp"    android:weightSum="2"    app:layout_constraintBottom_toBottomOf="parent"    app:layout_constraintEnd_toEndOf="parent"    app:layout_constraintStart_toStartOf="parent"/><View    android:id="@+id/viewBackground"    android:layout_width="match_parent"    android:layout_height="110dp"    android:background="@color/skyBlue"    app:layout_constraintTop_toTopOf="parent" /><ImageView    android:layout_width="0dp"    android:layout_height="240dp"    android:scaleType="fitXY"    android:src="@drawable/ic_wave"    app:layout_constraintEnd_toEndOf="parent"    app:layout_constraintStart_toStartOf="parent"    app:layout_constraintTop_toBottomOf="@id/viewBackground" /><ImageView    android:id="@+id/imageView2"    android:layout_width="100dp"    android:layout_height="100dp"    android:layout_marginTop="24dp"    android:layout_marginRight="24dp"    android:src="@drawable/ic_baseline_person_24"    app:layout_constraintEnd_toEndOf="parent"    app:layout_constraintTop_toTopOf="@+id/viewBackground" /><TextView    android:layout_width="0dp"    android:layout_height="wrap_content"    android:layout_marginLeft="24dp"    android:layout_marginTop="32dp"    android:layout_marginRight="36dp"    android:text="Belum Memiliki Akun? Daftar Sekarang !"    android:textColor="@color/white"    android:textSize="28sp"    android:textStyle="bold"    app:layout_constraintEnd_toStartOf="@+id/imageView2"    app:layout_constraintStart_toStartOf="@+id/viewBackground"    app:layout_constraintTop_toTopOf="@+id/viewBackground" /><ScrollView    android:windowSoftInputMode="adjustResize"    android:id="@+id/scrlDaftar"    android:layout_width="0dp"    android:layout_height="0dp"    android:layout_marginTop="115dp"    android:orientation="vertical"    app:layout_constraintBottom_toTopOf="@+id/linearLayout6"    app:layout_constraintEnd_toEndOf="parent"    app:layout_constraintHorizontal_bias="0.0"    app:layout_constraintStart_toStartOf="parent"    app:layout_constraintTop_toBottomOf="@id/viewBackground">    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:background="@color/white"        android:orientation="vertical">        <com.google.android.material.textfield.TextInputLayout            android:id="@+id/tilUsername"            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:hint="@string/username"            android:padding="16dp"            app:startIconDrawable="@drawable/ic_baseline_person_24"            app:endIconMode="clear_text"            app:startIconTint="@color/colorAccent">            <com.google.android.material.textfield.TextInputEditText                android:id="@+id/InUsername"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:drawablePadding="10dp"                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890_."                android:imeOptions="actionNext"                android:inputType="textFilter"                android:maxLines="1"                android:textColor="@color/colorAccent" />        </com.google.android.material.textfield.TextInputLayout>        <com.google.android.material.textfield.TextInputLayout            android:id="@+id/tilPassword"            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginTop="10dp"            android:hint="@string/password"            android:padding="16dp"            app:passwordToggleEnabled="true"            app:startIconDrawable="@drawable/ic_baseline_lock_24"            app:startIconTint="@color/colorAccent">            <com.google.android.material.textfield.TextInputEditText                android:id="@+id/InPassword"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890_."                android:drawablePadding="15dp"                android:inputType="textPassword"                android:maxLines="1"                android:textColor="@color/colorAccent" />        </com.google.android.material.textfield.TextInputLayout>        <com.google.android.material.textfield.TextInputLayout            android:id="@+id/tilNik"            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"            android:layout_width="match_parent"            android:layout_height="wrap_content"            app:endIconMode="clear_text"            android:hint="@string/nomor_induk_karyawan"            android:padding="16dp"            app:startIconDrawable="@drawable/ic_baseline_perm_identity_24"            app:startIconTint="@color/colorAccent">            <com.google.android.material.textfield.TextInputEditText                android:id="@+id/InNik"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:drawablePadding="10dp"                android:imeOptions="actionSend"                android:inputType="phone"                android:maxLines="1"                android:textColor="@color/colorAccent" />        </com.google.android.material.textfield.TextInputLayout>        <com.google.android.material.textfield.TextInputLayout            android:id="@+id/tilFullName"            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"            android:layout_width="match_parent"            android:layout_height="wrap_content"            app:endIconMode="clear_text"            android:layout_marginTop="10dp"            android:hint="@string/nama_lengkap"            android:padding="16dp"            app:startIconDrawable="@drawable/ic_baseline_credit_card_24"            app:startIconTint="@color/colorAccent">            <com.google.android.material.textfield.TextInputEditText                android:id="@+id/InFullName"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:drawablePadding="15dp"                android:maxLines="1"                android:textColor="@color/colorAccent" />        </com.google.android.material.textfield.TextInputLayout>        <com.google.android.material.textfield.TextInputLayout            android:id="@+id/tilEmail"            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginTop="10dp"            app:endIconMode="clear_text"            android:hint="@string/email_address"            android:padding="16dp"            app:startIconDrawable="@drawable/ic_mail_outline_black_24dp"            app:startIconTint="@color/colorAccent">            <com.google.android.material.textfield.TextInputEditText                android:id="@+id/InEmail"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:drawablePadding="15dp"                android:inputType="textEmailAddress"                android:maxLines="1"                android:textColor="@color/colorAccent" />        </com.google.android.material.textfield.TextInputLayout>        <com.google.android.material.textfield.TextInputLayout            android:id="@+id/tilPerusahaan"            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginTop="10dp"            android:hint="Perusahaan"            android:padding="16dp"            app:startIconDrawable="@drawable/ic_baseline_work_24"            app:startIconTint="@color/colorAccent">            <com.google.android.material.textfield.TextInputEditText                android:id="@+id/InPerusahaan"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:drawablePadding="15dp"                android:focusable="false"                android:maxLines="1"                android:textColor="@color/colorAccent" />        </com.google.android.material.textfield.TextInputLayout>        <com.google.android.material.textfield.TextInputLayout            android:id="@+id/tilDept"            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginTop="10dp"            android:hint="@string/departemen"            android:padding="16dp"            app:startIconDrawable="@drawable/ic_baseline_credit_card_24"            app:startIconTint="@color/colorAccent">            <com.google.android.material.textfield.TextInputEditText                android:id="@+id/InDept"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:drawablePadding="15dp"                android:focusable="false"                android:enabled="false"                android:maxLines="1"                android:textColor="@color/colorAccent" />        </com.google.android.material.textfield.TextInputLayout>        <com.google.android.material.textfield.TextInputLayout            android:id="@+id/tilSection"            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginTop="10dp"            android:hint="@string/devisi"            android:padding="16dp"            app:startIconDrawable="@drawable/ic_baseline_credit_card_24"            app:startIconTint="@color/colorAccent">            <com.google.android.material.textfield.TextInputEditText                android:id="@+id/InSection"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:drawablePadding="15dp"                android:enabled="false"                android:focusable="false"                android:maxLines="1"                android:textColor="@color/colorAccent" />        </com.google.android.material.textfield.TextInputLayout>        <com.google.android.material.button.MaterialButton            android:id="@+id/btnDaftar"            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_margin="16dp"            android:layout_marginTop="10dp"            android:backgroundTint="@color/colorPrimary"            android:padding="8dp"            android:enabled="false"            android:text="Daftar"            android:textAllCaps="false"            android:textColor="@color/white"            android:textStyle="bold" />    </LinearLayout></ScrollView><LinearLayout    android:layout_marginBottom="24dp"    android:id="@+id/linearLayout6"    android:layout_width="0dp"    android:layout_height="wrap_content"    android:orientation="vertical"    app:layout_constraintBottom_toBottomOf="@+id/ic_wave2"    app:layout_constraintEnd_toEndOf="parent"    app:layout_constraintStart_toStartOf="parent">    <com.google.android.material.button.MaterialButton        android:id="@+id/btnHaveAccount"        style="@style/Widget.AppCompat.Button.Borderless"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_gravity="center"        android:gravity="center"        android:text="Sudah Memiliki Akun?"        android:textAllCaps="false"        android:textColor="@color/colorAccent" /></LinearLayout></androidx.constraintlayout.widget.ConstraintLayout>